--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -6,11 +6,11 @@
   </head>
   <body style="font-family: Helvetica Neue; background-color: #000000 "></body>
   <body>
-    <a class="fg-color-white" href=../tuiter/navigation.html>Back</a>
+    <a class="wd-fg-color-white" href=../tuiter/navigation.html>Back</a>
     <br />
-    <div class="solid-border">
+    <div class="wd-solid-border">
       <input
-        class="rounded-corners-all-around relative-right border-around"
+        class="wd-rounded-corners-all-around wd-relative-right "
         type="text"
         id="name"
         name="name"
@@ -22,56 +22,56 @@
       />
       <a href="explore-settings.html">
       <img
-        class="img0"
+        class="wd-gear-icon"
         src="https://www.clipartmax.com/png/full/108-1089717_twitter-gear-settings-icon-png.png"
         width="30"
       /></a>
 
       <ul>
-          <li class ="float"><a class="border-bottom" href="#For you">For You</a></li>
-          <li class ="float"><a href="#Trending">Trending</a></li>
-          <li class ="float"><a href="#COVID-19">COVID-19</a></li>
-          <li class ="float"><a href="#News">News</a></li>
-          <li class ="float"><a href="#Sports">Sports</a></li>
-          <li class ="float"><a href="#Entertainment">Entertainment</a></li>
+          <li class ="wd-float"><a class="wd-border-bottom" href="#For you">For You</a></li>
+          <li class ="wd-float"><a href="#Trending">Trending</a></li>
+          <li class ="wd-float"><a href="#COVID-19">COVID-19</a></li>
+          <li class ="wd-float"><a href="#News">News</a></li>
+          <li class ="wd-float"><a href="#Sports">Sports</a></li>
+          <li class ="wd-float"><a href="#Entertainment">Entertainment</a></li>
       </ul>
     </div>
-    <div class="solid-border-beginning"></div>
+    <div class="wd-solid-border-beginning"></div>
 
-        <ul class="no-bullets solid-border2" >
-            <li class ="position-right">Trending in Science</li>
-            <li class = "position-right white-16"><strong>Starship</strong></li>
-            <li class ="position-right">55.5K Tweets</li>
+        <ul class="wd-no-bullets wd-solid-border2" >
+            <li class ="wd-position-right">Trending in Science</li>
+            <li class = "wd-position-right wd-white-13"><strong>Starship</strong></li>
+            <li class ="wd-position-right">55.5K Tweets</li>
         </ul>
-        <ul class="no-bullets solid-border2" >
-            <li class ="position-right">Sports • Trending</li>
-            <li class = "position-right white-16"><strong>Joe Rogan</strong></li>
-            <li class ="position-right">5,218 Tweets</li>
-        </ul>
-
-        <ul class="no-bullets solid-border3" >
-            <li class ="position-right white-13">The New York Times <img class = "img-center" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn3VnyvoIQ6kNTUhbqIW13mzHwrpHsXU9KrA&usqp=CAU" width="13" height ="13"> <mark class = "gray"> • Yesterday</li>
-            <li class = "position-right white-13"><strong>CNN's Cuomo conundrum: A star anchor with a brother in</strong></li>
-            <li class = "position-right white-13"><strong>trouble</strong></li>
-            <img class = "img1" src="https://static01.nyt.com/images/2020/04/06/business/04chris-cuomo/0405JPBENSMITH-print-jumbo-v2.jpg" width="100" height="100">
+        <ul class="wd-no-bullets wd-solid-border2" >
+            <li class ="wd-position-right">Sports • Trending</li>
+            <li class = "wd-position-right wd-white-13""><strong>Joe Rogan</strong></li>
+            <li class ="wd-position-right">5,218 Tweets</li>
         </ul>
 
-        <ul class="no-bullets solid-border4" >
-            <li class ="position-right white-13"><mark class = "gray"> COVID-19 • LIVE</mark></li>
-            <li class = "position-right white-13"><strong>COVID-19: News and updates for Massachusetts</strong></li>
-            <img class = "img2" src="https://pbs.twimg.com/media/EVMd9OHVAAExu73.png" width="100" height="100">
+        <ul class="wd-no-bullets wd-solid-border3" >
+            <li class ="wd-position-right ±x">The New York Times <img class = "img-center" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn3VnyvoIQ6kNTUhbqIW13mzHwrpHsXU9KrA&usqp=CAU" width="13" height ="13"> <mark class = "wd-gray"> • Yesterday</li>
+            <li class = "wd-position-right wd-white-13"><strong>CNN's Cuomo conundrum: A star anchor with a brother in</strong></li>
+            <li class = "wd-position-right wd-white-13"><strong>trouble</strong></li>
+            <img class = "wd-img1" src="https://static01.nyt.com/images/2020/04/06/business/04chris-cuomo/0405JPBENSMITH-print-jumbo-v2.jpg" width="100" height="100">
         </ul>
 
-        <ul class="no-bullets solid-border4" >
-            <li class ="position-right white-13">Bloomberg Opinion <img class = "img-center" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn3VnyvoIQ6kNTUhbqIW13mzHwrpHsXU9KrA&usqp=CAU" width="13" height ="13"> <mark class = "gray"> • Yesterday</li>
-            <li class = "position-right white-13"><strong>Thinking about getting a booster? Read this first.</strong></li>
-            <img class = "img2" src="https://media.globalcitizen.org/thumbnails/89/74/8974fddb-0730-45c6-bafa-7dfddaef5d4a/covid-booster-shot.jpg__1600x900_q85_crop_subsampling-2.jpg" width="100" height="100">
+        <ul class="wd-no-bullets wd-solid-border4" >
+            <li class ="wd-position-right"><mark class = "wd-gray"> COVID-19 • LIVE</mark></li>
+            <li class = "wd-position-right wd-white-13"><strong>COVID-19: News and updates for Massachusetts</strong></li>
+            <img class = "wd-img2" src="https://pbs.twimg.com/media/EVMd9OHVAAExu73.png" width="100" height="100">
         </ul>
 
-        <ul class="no-bullets solid-border2" >
-            <li class ="position-right">Trending in United States</li>
-            <li class = "position-right white-16"><strong>Maple Story</strong></li>
-            <li class ="position-right">1,259 Tweets</li>
+        <ul class="wd-no-bullets wd-solid-border4" >
+            <li class ="wd-position-right wd-white-13">Bloomberg Opinion <img class = "img-center" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn3VnyvoIQ6kNTUhbqIW13mzHwrpHsXU9KrA&usqp=CAU" width="13" height ="13"> <mark class = "wd-gray"> • Yesterday</li>
+            <li class = "wd-position-right wd-white-13"><strong>Thinking about getting a booster? Read this first.</strong></li>
+            <img class = "wd-img2" src="https://media.globalcitizen.org/thumbnails/89/74/8974fddb-0730-45c6-bafa-7dfddaef5d4a/covid-booster-shot.jpg__1600x900_q85_crop_subsampling-2.jpg" width="100" height="100">
+        </ul>
+
+        <ul class="wd-no-bullets wd-solid-border2" >
+            <li class ="wd-position-right">Trending in United States</li>
+            <li class = "wd-position-right wd-white-13"><strong>Maple Story</strong></li>
+            <li class ="wd-position-right">1,259 Tweets</li>
         </ul>
 
 
