--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -68,7 +68,7 @@
             <img class = "wd-img2" src="https://media.globalcitizen.org/thumbnails/89/74/8974fddb-0730-45c6-bafa-7dfddaef5d4a/covid-booster-shot.jpg__1600x900_q85_crop_subsampling-2.jpg" width="100" height="100">
         </ul>
 
-        <ul class="wd-no-bullets wd-solid-border2" >
+        <ul class="wd-no-bullets wd-solid-border-2-all" >
             <li class ="wd-position-right">Trending in United States</li>
             <li class = "wd-position-right wd-white-13"><strong>Maple Story</strong></li>
             <li class ="wd-position-right">1,259 Tweets</li>
