--- a/public/tuiter/exp.html
+++ b/public/tuiter/exp.html
@@ -4,7 +4,7 @@
 <head>
   <title>Explore</title>
   <link href="/public/vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="explore.css" rel="stylesheet" />
+  <link href="exp.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
 
 
