--- a/public/labs/a4/challenge/explore.html
+++ b/public/labs/a4/challenge/explore.html
@@ -185,7 +185,7 @@
       </div>
 
       <!-- third col -->
-      <div class="col-xxl-4 col-xl-4 col-lg-4 d-sm-none d-md-block d-none d-sm-block d-md-none d-lg-block mt-2 ">
+      <div class="col-xxl-4 col-xl-4 col-lg-4 d-sm-none d-md-block d-none d-sm-block d-md-none d-lg-block mt-2 ps-2">
         <div class="ms-1">
           <div class="list-group">
             <a href="#" class="list-group-item list-group-item-dark "><strong>Who to follow</strong></a>
