--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -184,7 +184,7 @@
       </div>
 
       <!-- third col -->
-      <div class="col-xxl-4 col-xl-4 col-lg-4 d-sm-none d-md-block d-none d-sm-block d-md-none d-lg-block mt-2 ps-2">
+      <div class="col-xxl-4 col-xl-4 col-lg-4 d-sm-none d-md-block d-none d-sm-block d-md-none d-lg-block mt-2 ps-2 wd-ps-col3">
         <div class="ms-1">
           <div class="list-group">
             <a href="#" class="list-group-item   "><strong>Who to follow</strong></a>
