--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
       <li><a href="labs/a3/challenge/index.html">Assignment 3 Challenge</a></li>
       <li><a href="labs/a4/bootstrap/index.html">Assignment 4 Labs</a></li>
       <li><a href="labs/a4/challenge/explore.html">Assignment 4 Challenge</a></li>
+      <li><a href="labs/a5/index.html">Assignment 5 Labs</a></li>
     </ul>
   </body>
 </html>
