--- a/public/labs/a5/js/index.html
+++ b/public/labs/a5/js/index.html
@@ -14,7 +14,7 @@
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <a href="../index.html">Back</a>
+    <a href="../../../index.html">Back</a>
     <h2>Embedded script tag</h2>
     <!-- <script>
         alert('Hello World!'); </script> -->
