--- a/public/tuiter/HomeScreen/home.html
+++ b/public/tuiter/HomeScreen/home.html
@@ -11,7 +11,8 @@
     />
 
     <link href="../../vendors/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="explore.css" rel="stylesheet" />
+    <link href="/public/tuiter/ExploreScreen/explore.css" rel="stylesheet" />
+    <link href="home.css" rel="stylesheet" />
 
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -22,13 +23,12 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8" />
-    <title>Explore screen</title>
+    <title>Home Screen</title>
   </head>
   <body>
-    <div class="container" id="wd-explore">
+    <div class="container" id="wd-home">
       <a href="../../tuiter/navigation.html">Back</a>
     </div>
-
-    <script src="ExploreScreen.js" type="module"></script>
+    <script src="HomeScreen.js" type="module"></script>
   </body>
 </html>
