--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -16,6 +16,8 @@
       <li><a href="profile.html">profile</a></li>
       <li><a href="tuit.html">Tuit</a></li>
       <li><a href="reply.html">Reply</a></li>
+      <li><a href="ExploreScreen/explore.html">Explore Screen</a></li>
+      <li><a href="HomeScreen/home.html">Home Screen</a></li>
     </ul>
   </body>
 </html>
