--- a/public/tuiter/HomeScreen/home.html
+++ b/public/tuiter/HomeScreen/home.html
@@ -11,6 +11,7 @@
     />
 
     <link href="../../vendors/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="../ExploreScreen/explore.css" rel="stylesheet" />
     <link href="home.css" rel="stylesheet" />
 
     <link
