--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     -->
     <h1>Web Dev Assignments</h1>
     <div id="root"></div>
+    <h1>Non React.js Assignments</h1>
     <ul>
       <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
       <li><a href="tuiter/navigation.html">Tuiter</a></li>
@@ -51,10 +52,6 @@
         <a href="labs/a4/challenge/explore.html">Assignment 4 Challenge</a>
       </li>
       <li><a href="labs/a5/index.html">Assignment 5 Labs</a></li>
-      <li><a href="a2/index.html">Assignment 2</a></li>
-      <li><a href="a3/index.html">Assignment 3</a></li>
-      <li><a href="a4/index.html">Assignment 4</a></li>
-      <li><a href="a5/index.html">Assignment 5</a></li>
     </ul>
   </body>
 </html>
