--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     -->
     <h1>Web Dev Assignments</h1>
     <div id="root"></div>
-    <h1>Non React.js Assignments</h1>
+   <!--  <h1>Non React.js Assignments</h1>
     <ul>
       <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
       <li><a href="tuiter/navigation.html">Tuiter</a></li>
@@ -52,6 +52,6 @@
         <a href="labs/a4/challenge/explore.html">Assignment 4 Challenge</a>
       </li>
       <li><a href="labs/a5/index.html">Assignment 5 Labs</a></li>
-    </ul>
+    </ul> -->
   </body>
 </html>
