--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -7,7 +7,7 @@
     <a href="../index.html">Back</a>
     <h1>Tuiter</h1>
     <ul>
-      <li><a href="home.html">Home</a></li>
+     <!--  <li><a href="home.html">Home</a></li>
       <li><a href="explore.html">Explore</a></li>
       <li><a href="notification.html">Notification</a></li>
       <li><a href="message.html">Message</a></li>
@@ -17,7 +17,7 @@
       <li><a href="tuit.html">Tuit</a></li>
       <li><a href="reply.html">Reply</a></li>
       <li><a href="ExploreScreen/explore.html">Explore Screen</a></li>
-      <li><a href="HomeScreen/home.html">Home Screen</a></li>
+      <li><a href="HomeScreen/home.html">Home Screen</a></li> -->
     </ul>
   </body>
 </html>
